# basic-pitch-vamp-plugin

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codacy.yml
docs/: basicpitch-manual.md
resource/: About.txt  basicpitch.cat  ircambasicpitch.cat
source/: bpvp.cpp  bpvp.h  bpvp_convert.cpp  bpvp_convert.h  bpvp_model.h
test/: basicpitch.ptldoc  m10_row_spoken.ptldoc
